<resources>
    <string name="app_name">Trippleatt</string>
    <string name="business"><u>Business</u></string>
    <string name="business_signup_text_und"><u>Sign Up</u></string>
    <string name="business_signin_text_und"><u>Sign In</u>></string>
    <string name="otp_verification_text">OTP has been send to your Mobile phone. Please enter it below.</string>
    <string name="otp_verification_text2">OTP has been send to XXXXXXXXXX. Please enter OTP to verify Shop.</string>
    <string name="save_and_continue">Save &amp; Continue</string>
    <string name="business_email_id_phone_number">Business Email id / Phone Number</string>
    <string name="already_registered">Already Registered</string>
    <string name="front_image">Front Image</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="add_category">Add Category</string>
    <string name="contact_email_id">Contact Email Id</string>
    <string name="website">Website</string>
    <string name="submit">Submit</string>
    <string name="enter_email_phone_number">Enter Email / Phone Number</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_business_account">Create Business Account</string>
    <string name="please_select_your_business">Please Select Your Business</string>
    <string name="i_have_a_shop">I have a Shop</string>
    <string name="i_have_room_for_rent">I have Room for Rent</string>
    <string name="back_button">back button</string>
    <string name="move_the_map_to_the_current_location">Move the map to the current location</string>
    <string name="ok">OK</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="_91">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="are_you_a">Are you a </string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_manually">Verify Manually</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="set_up_your_location">Set up your Location</string>
    <string name="welcome_to_the_home_screen">Welcome To The Home Screen</string>
    <string name="customer_sign_up">Customer Sign Up</string>
    <string name="business_sign_up">Business Sign Up</string>
    <string name="exist_shop">Exist Shop</string>
    <string name="business_sign_in">Business Sign In</string>
    <string name="shop_name">Shop Name</string>
    <string name="category">Category</string>
</resources>