<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.businessDetails.BusinessDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/frontImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_image"
                    android:contentDescription="@string/front_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_image"
                    android:contentDescription="@string/image_1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_image"
                    android:contentDescription="@string/image_2"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etShopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_shop_name"
        android:autofillHints="@string/enter_shop_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <EditText
        android:id="@+id/etAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_category"
        android:autofillHints="@string/add_category"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShopName" />

    <EditText
        android:id="@+id/etContactEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_email_id"
        android:autofillHints="@string/contact_email_id"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddCategory" />

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/website"
        android:autofillHints="@string/website"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContactEmailId" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>